Don't always trust the attachment's mimeType, it can be invalid.

BUG: 195654

svn path=/trunk/KDE/kdepim/; revision=979039